# Bottles-Deflatpak

./: .gitignore  .mailmap  .pre-commit-config.yaml  CODING_GUIDE.md  CONTRIBUTING.md  README.md  VERSION_UPDATE.md  check.sh  default.nix  flake.nix  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  shell.nix
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: close-issues.yml  package.yml  pre-commit.yml
bottles/: meson.build
bottles/backend/: cabextract.py  globals.py  health.py  logger.py
bottles/backend/managers/: component.py  data.py  dependency.py  eagle.py  installer.py  manager.py  playtime.py  repository.py  sandbox.py  steam.py  versioning.py
bottles/backend/models/: config.py  samples.py
bottles/backend/repos/: repo.py
bottles/backend/utils/: connection.py  display.py  generic.py  gpu.py  gsettings_stub.py  imagemagick.py  manager.py  meson.build  steam.py  terminal.py  umu.py  vulkan.py
bottles/backend/wine/: executor.py  reg.py  wineboot.py  winecommand.py  winedbg.py
bottles/frontend/: main.py  meson.build  operation.py
bottles/frontend/ui/: bottle-row.blp  details-bottle.blp  details-preferences.blp  dialog-deps-check.blp  dialog-launch-options.blp  dialog-sandbox.blp  preferences.blp  state-entry.blp
bottles/fvs/: exceptions.py  repo.py
build-aux/: build.sh
data/: com.usebottles.bottles.gschema.xml  com.usebottles.bottles.metainfo.xml.in.in
nix/: fhsenv.nix  package.nix
packaging/aur/: PKGBUILD
packaging/deb/debian/: control  (+2 more)
packaging/rpm/: bottles.spec  changelog
po/: meson.build
tests/: test_fvs.py
(+41 files in other folders)
